@@ -1,0 +1,3 @@
+DIST x2gohostadministration_2.0.1-4.diff.gz 35134 RMD160 9fc20515a0ed29e529a78c8b8087c7e7d5fc7885 SHA1 1ef85230cda9a048e299dae9927c1eb92cf2d565 SHA256 5f6db3a28d499f03c8383cb4193907a2e40b85d042ff64c3720c8f75c792c789
+DIST x2gohostadministration_2.0.1.orig.tar.gz 1037075 RMD160 b27f31cc51defcca4769de0e245c053bc0bf725b SHA1 dda2c4712dcb557dd2e520154be0bd0f32306ed8 SHA256 e30305563181690b731011412fffa9ef44bd2e68be9ccc7c92be954fcc19b2ab
+EBUILD x2gohostadministration-2.0.1.4.ebuild 689 RMD160 2dced04cbef36db19aec472b15d1842cd95ad237 SHA1 30e0ec1234f0b33d85e5b3f8ad2f7a8bac03d0d0 SHA256 d4aaaa62c90d294f6652a2379c0d1e31a56b136432bcd193bf4b1aba06bf8e96
