@@ -1,0 +1,2 @@
+DIST x2gouseradministration_2.0.1-7.tar.gz 768453 RMD160 f91b68b40f0615dce234d68a9f1b019725dd474e SHA1 8f01b991f8ffc6de0492dfa694e4c74b296c4535 SHA256 ae02b36b328a3ab69080ddc6a1242ca050b67717f5c8bf4f6d882ad9b8f69cb0
+EBUILD x2gouseradministration-2.0.1.7.ebuild 526 RMD160 27b3226acdcd6a4f5ac4bcf21e74920294cb7042 SHA1 20feef12a821b71fa81fb7a60048374324cde291 SHA256 5e3e7ea23c396e186533ae0c12915d7089d9f876fd720b9426ce0324bd36b3df
